--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coblocks",
   "title": "CoBlocks",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "author": "Rich Tabor from CoBlocks",
   "requires": "4.9",
@@ -9,7 +9,7 @@
   "license": "GPL-3.0",
   "copyright": "Copyright (c) 2018, CoBlocks of Inventionn LLC",
   "downloadid": "",
-  "description": "A suite of content blocks for the upcoming WordPress block editor, also called Gutenberg.",
+  "description": "CoBlocks is a suite of professional content blocks for the upcoming WordPress Gutenberg block editor. Our blocks are hyper-focused on empowering content marketers, writers and publishers to write beautifully rich content in WordPress.",
   "tags": "",
   "scripts": {
     "start": "cgb-scripts start",
