--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "author": "Rich Tabor from CoBlocks",
   "requires": "4.9",
-  "tested_up_to": "4.9.5",
+  "tested_up_to": "4.9.7",
   "license": "GPL-3.0",
   "copyright": "Copyright (c) 2018, CoBlocks of Inventionn LLC",
   "downloadid": "",
@@ -40,6 +40,7 @@
     "gulp-notify": "^3.2.0",
     "gulp-open": "^2.0.0",
     "gulp-rename": "^1.2.0",
+    "gulp-sftp": "^0.1.5",
     "gulp-replace-task": "^0.11.0",
     "gulp-run-command": "0.0.9",
     "gulp-zip": "^4.0.0",
