Ignore dist files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ dist/**
 sftp.json
 .github/
 .github/issue_template.md
+
+dist/blocks.build.js
+
+dist/blocks.editor.build.css
+
+dist/blocks.style.build.css
