--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "coblocks",
   "title": "CoBlocks",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "private": true,
   "author": "Rich Tabor from CoBlocks",
+  "author_shop": "CoBlocks",
+  "author_uri": "yourfriends@coblocks.com",
   "requires": "4.9",
-  "tested_up_to": "4.9.7",
+  "tested_up_to": "4.9.8",
   "license": "GPL-3.0",
   "copyright": "Copyright (c) 2018, CoBlocks of Inventionn LLC",
   "downloadid": "",
@@ -37,13 +39,14 @@
     "gulp": "^4.0.0",
     "gulp-cache": "^1.0.2",
     "gulp-copy": "^1.0.1",
-    "gulp-notify": "^3.2.0",
     "gulp-if": "^2.0.2",
+    "gulp-notify": "^3.2.0",
     "gulp-open": "^2.0.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sftp": "^0.1.5",
     "gulp-replace-task": "^0.11.0",
     "gulp-run-command": "0.0.9",
+    "gulp-sftp": "^0.1.5",
+    "gulp-wp-pot": "^2.3.2",
     "gulp-zip": "^4.0.0",
     "stylelint-config-wordpress": "^13.0.0"
   },
