--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "tags": "",
   "scripts": {
     "start": "cgb-scripts start",
-    "build": "cgb-scripts build",
-    "eject": "cgb-scripts eject"
+    "build": "cgb-scripts build | babel src --ignore src/blocks/gist/components/gist.js",
+    "eject": "cgb-scripts eject",
+    "makepot": "wp i18n make-pot . --merge=languages/coblocks-js.pot --skip-js",
+    "makepot:php": "npx pot-to-php languages/coblocks.pot languages/coblocks-translations.php coblocks"
   },
   "dependencies": {
     "cgb-scripts": "1.11.0",
@@ -35,6 +37,12 @@
     "stylelint-config-wordpress": "^13.0.0"
   },
   "devDependencies": {
+    "@wordpress/babel-plugin-makepot": "^2.1.2",
+    "@wordpress/babel-preset-default": "^1.1.2",
+    "@wordpress/i18n": "^1.2.3",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.4",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-cache": "^1.0.2",
