--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
+**/*.min.js
+**/*.build.js
 **/node_modules/**
+**/vendor/**
+**/dist/blocks.build.js
+**/dist/blocks.editor.build.css
+**/dist/*.css
 **/build/**
-dist/**
-**/dist/**
 **/languages/**
 *.sublime-project
 *.sublime-workspace
 *.cache
 .ftppass
+coverage
+cypress
 sftp.json
 .github/
 .github/issue_template.md
