--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Rich Tabor from CoBlocks",
   "author_shop": "CoBlocks",
   "author_uri": "yourfriends@coblocks.com",
-  "requires": "4.9",
-  "tested_up_to": "5.0.2",
+  "requires": "5.0",
+  "tested_up_to": "5.0.3",
   "license": "GPL-3.0",
   "copyright": "Copyright (c) 2018, CoBlocks of Inventionn LLC",
   "downloadid": "",
@@ -21,20 +21,19 @@
     "makepot:php": "npx pot-to-php languages/coblocks.pot languages/coblocks-translations.php coblocks"
   },
   "dependencies": {
-    "cgb-scripts": "1.11.0",
+    "@wordpress/api-fetch": "^2.2.5",
+    "@wordpress/plugins": "^1.0.4",
+    "@wordpress/redux-routine": "^3.0.3",
+    "cgb-scripts": "^1.13.0",
     "classnames": "2.2.5",
-    "memize": "^1.0.5",
+    "compose": "^0.1.2",
+    "delete-empty": "^2.0.0",
     "lodash": "4.17.4",
-    "md5": "^2.2.1",
-    "moment": "2.21.0",
-    "postcss": "^6.0.19",
-    "querystringify": "1.0.0",
-    "react": "^16.2.0",
-    "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
-    "striptags": "^3.1.1",
-    "stylelint": "^9.1.1",
-    "stylelint-config-wordpress": "^13.0.0"
+    "memize": "^1.0.5",
+    "react": "^16.6.3",
+    "react-google-maps": "^9.4.5",
+    "redux": "^4.0.1",
+    "stylelint": "^9.1.1"
   },
   "devDependencies": {
     "@wordpress/babel-plugin-makepot": "^2.1.2",
@@ -45,18 +44,23 @@
     "babel-loader": "^7.1.4",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-cache": "^1.0.2",
     "gulp-copy": "^1.0.1",
     "gulp-if": "^2.0.2",
+    "gulp-line-ending-corrector": "^1.0.1",
     "gulp-notify": "^3.2.0",
     "gulp-open": "^2.0.0",
-    "gulp-rename": "^1.2.0",
+    "gulp-rename": "^1.4.0",
     "gulp-replace-task": "^0.11.0",
     "gulp-run-command": "0.0.9",
+    "gulp-sass": "^3.2.1",
     "gulp-sftp": "^0.1.5",
-    "gulp-wp-pot": "^2.3.2",
-    "gulp-zip": "^4.0.0",
-    "stylelint-config-wordpress": "^13.0.0"
+    "gulp-uglify": "^1.5.3",
+    "gulp-uglifycss": "^1.0.8",
+    "gulp-wp-pot": "^2.3.3",
+    "gulp-zip": "^4.2.0",
+    "stylelint-config-wordpress": "^13.1.0"
   },
   "stylelint": {
     "extends": "stylelint-config-wordpress/scss",
