--- a/package.json
+++ b/package.json
@@ -1,72 +1,84 @@
 {
-  "name": "coblocks",
-  "title": "CoBlocks",
-  "version": "1.5.3",
-  "private": true,
-  "author": "Rich Tabor from CoBlocks",
-  "author_shop": "CoBlocks",
-  "author_uri": "yourfriends@coblocks.com",
-  "requires": "5.0",
-  "tested_up_to": "5.0.3",
-  "license": "GPL-3.0",
-  "copyright": "Copyright (c) 2018, CoBlocks of Inventionn LLC",
-  "downloadid": "",
-  "description": "CoBlocks is a suite of professional content blocks for the WordPress Gutenberg block editor. Our blocks are hyper-focused on empowering content marketers, writers and publishers to write beautifully rich content in WordPress.",
-  "tags": "",
-  "scripts": {
-    "start": "cgb-scripts start",
-    "build": "cgb-scripts build | babel src --ignore src/blocks/gist/components/gist.js",
-    "eject": "cgb-scripts eject",
-    "makepot": "wp i18n make-pot . --merge=languages/coblocks-js.pot --skip-js",
-    "makepot:php": "npx pot-to-php languages/coblocks.pot languages/coblocks-translations.php coblocks"
-  },
-  "dependencies": {
-    "@wordpress/api-fetch": "^2.2.5",
-    "@wordpress/plugins": "^1.0.4",
-    "@wordpress/redux-routine": "^3.0.3",
-    "cgb-scripts": "^1.13.0",
-    "classnames": "2.2.5",
-    "compose": "^0.1.2",
-    "delete-empty": "^2.0.0",
-    "lodash": "4.17.4",
-    "memize": "^1.0.5",
-    "react": "^16.6.3",
-    "react-google-maps": "^9.4.5",
-    "redux": "^4.0.1",
-    "stylelint": "^9.1.1"
-  },
-  "devDependencies": {
-    "@wordpress/babel-plugin-makepot": "^2.1.2",
-    "@wordpress/babel-preset-default": "^1.1.2",
-    "@wordpress/i18n": "^1.2.3",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.4",
-    "del": "^3.0.0",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-cache": "^1.0.2",
-    "gulp-copy": "^1.0.1",
-    "gulp-if": "^2.0.2",
-    "gulp-line-ending-corrector": "^1.0.1",
-    "gulp-notify": "^3.2.0",
-    "gulp-open": "^2.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-replace-task": "^0.11.0",
-    "gulp-run-command": "0.0.9",
-    "gulp-sass": "^3.2.1",
-    "gulp-sftp": "^0.1.5",
-    "gulp-uglify": "^1.5.3",
-    "gulp-uglifycss": "^1.0.8",
-    "gulp-wp-pot": "^2.3.3",
-    "gulp-zip": "^4.2.0",
-    "stylelint-config-wordpress": "^13.1.0"
-  },
-  "stylelint": {
-    "extends": "stylelint-config-wordpress/scss",
-    "rules": {
-      "at-rule-empty-line-before": null,
-      "no-descending-specificity": null
-    }
-  }
+	"name": "coblocks",
+	"title": "CoBlocks",
+	"version": "1.5.3",
+	"private": false,
+	"author": "Rich Tabor & Jeffrey Carandang from CoBlocks",
+	"author_shop": "CoBlocks",
+	"author_uri": "hello@coblocks.com",
+	"requires": "5.0",
+	"tested_up_to": "5.0.3",
+	"license": "GPL-3.0",
+	"copyright": "Copyright (c) 2018, CoBlocks",
+	"downloadid": "",
+	"description": "CoBlocks is a suite of professional content blocks for the WordPress Gutenberg block editor. Our blocks are hyper-focused on empowering content marketers, writers and publishers to write beautifully rich content in WordPress.",
+	"tags": "",
+	"scripts": {
+		"start": "cgb-scripts start",
+		"build": "cgb-scripts build | babel src --ignore src/blocks/gist/components/gist.js",
+		"eject": "cgb-scripts eject",
+		"makepot": "wp i18n make-pot . --merge=languages/coblocks-js.pot --skip-js",
+		"makepot:php": "npx pot-to-php languages/coblocks.pot languages/coblocks-translations.php coblocks"
+	},
+	"dependencies": {
+		"@wordpress/api-fetch": "^2.2.5",
+		"@wordpress/plugins": "^1.0.4",
+		"@wordpress/redux-routine": "^3.0.3",
+		"cgb-scripts": "^1.13.0",
+		"classnames": "2.2.5",
+		"compose": "^0.1.2",
+		"delete-empty": "^2.0.0",
+		"lodash": "4.17.4",
+		"memize": "^1.0.5",
+		"react": "^16.6.3",
+		"react-google-maps": "^9.4.5",
+		"redux": "^4.0.1",
+		"postcss": "^6.0.19",
+		"stylelint": "^9.1.1",
+		"eslint": "^4.19.1",
+		"eslint-config-wordpress": "^2.0.0",
+		"postcss": "^6.0.19"
+	},
+	"devDependencies": {
+		"@wordpress/babel-plugin-makepot": "^2.1.2",
+		"@wordpress/babel-preset-default": "^1.1.2",
+		"@wordpress/i18n": "^1.2.3",
+		"babel-cli": "^6.26.0",
+		"babel-core": "^6.25.0",
+		"babel-loader": "^7.1.4",
+		"del": "^3.0.0",
+		"gulp": "^4.0.0",
+		"gulp-autoprefixer": "^5.0.0",
+		"gulp-cache": "^1.0.2",
+		"gulp-copy": "^1.0.1",
+		"gulp-if": "^2.0.2",
+		"gulp-line-ending-corrector": "^1.0.1",
+		"gulp-notify": "^3.2.0",
+		"gulp-open": "^2.0.0",
+		"gulp-rename": "^1.4.0",
+		"gulp-replace-task": "^0.11.0",
+		"gulp-run-command": "0.0.9",
+		"gulp-sass": "^3.2.1",
+		"gulp-sftp": "^0.1.5",
+		"gulp-uglify": "^1.5.3",
+		"gulp-uglifycss": "^1.0.8",
+		"gulp-wp-pot": "^2.3.3",
+		"gulp-zip": "^4.2.0",
+		"prettier-stylelint": "^0.4.2",
+		"stylelint-config-wordpress": "^13.0.0",
+		"stylelint-config-prettier": "^3.1.0",
+		"stylelint-order": "^0.8.1"
+	},
+	"stylelint": {
+		"extends": ["stylelint-config-wordpress/scss", "stylelint-config-prettier"],
+		"plugins": ["stylelint-order"],
+		"rules": {
+			"at-rule-empty-line-before": "always",
+			"at-rule-empty-line-before": null,
+			"order/properties-alphabetical-order": true
+		}
+	},
+	"eslintConfig": {
+		"extends": "wordpress"
+	}
 }
