--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"author_uri": "hello@coblocks.com",
 	"requires": "5.0",
 	"tested_up_to": "5.0.3",
-	"license": "GPL-3.0",
+	"license": "GPL-2.0",
 	"copyright": "Copyright (c) 2018, CoBlocks",
 	"downloadid": "",
 	"description": "CoBlocks is a suite of professional content blocks for the WordPress Gutenberg block editor. Our blocks are hyper-focused on empowering content marketers, writers and publishers to write beautifully rich content in WordPress.",
@@ -70,13 +70,8 @@
 		"stylelint-order": "^0.8.1"
 	},
 	"stylelint": {
-		"extends": [
-			"stylelint-config-wordpress/scss",
-			"stylelint-config-prettier"
-		],
-		"plugins": [
-			"stylelint-order"
-		],
+		"extends": ["stylelint-config-wordpress/scss", "stylelint-config-prettier"],
+		"plugins": ["stylelint-order"],
 		"rules": {
 			"at-rule-empty-line-before": null,
 			"no-descending-specificity": null,
