--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"memize": "^1.0.5",
 		"postcss": "^6.0.23",
 		"react": "^16.8.4",
+		"react-flickity-component": "^3.2.0",
 		"react-google-maps": "^9.4.5",
 		"react-masonry-component": "^6.2.1",
 		"redux": "^4.0.1",
