--- a/package.json
+++ b/package.json
@@ -55,14 +55,17 @@
 		"grunt-contrib-imagemin": "^3.1.0",
 		"grunt-contrib-jshint": "^1.1.0",
 		"grunt-contrib-uglify": "^2.0.0",
+		"grunt-contrib-watch": "^1.1.0",
 		"grunt-dev-update": "^2.3.0",
 		"grunt-potomo": "^3.5.0",
+		"grunt-sass": "^3.0.2",
 		"grunt-shell": "^2.1.0",
 		"grunt-text-replace": "^0.4.0",
 		"grunt-wp-deploy": "^2.0.0",
 		"grunt-wp-i18n": "^1.0.2",
 		"grunt-wp-readme-to-markdown": "^2.0.1",
 		"matchdep": "^2.0.0",
+		"node-sass": "^4.12.0",
 		"prettier-stylelint": "^0.4.2",
 		"stylelint-config-prettier": "^3.1.0",
 		"stylelint-config-wordpress": "^13.1.0",
