--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"grunt": "^1.0.3",
 		"grunt-contrib-clean": "^1.0.0",
 		"grunt-contrib-copy": "^1.0.0",
+		"grunt-contrib-compress": "^1.4.1",
 		"grunt-contrib-cssmin": "^2.0.0",
 		"grunt-contrib-imagemin": "^3.1.0",
 		"grunt-contrib-jshint": "^1.1.0",
