Add tag and branch filters to deploy job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,11 @@ workflows:
             - php71-build
             - php72-build
             - hold
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              ignore: /.*/
 
 version: 2
 jobs:
