--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
     docker:
       - image: circleci/php:7.1
       - image: circleci/mysql:5.7
+      - image: circleci/golang:1.12
     steps:
       - checkout
       - run:
