Update deploy with ghr, added npm postversion

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,6 @@ jobs:
     docker:
       - image: circleci/php:7.1
       - image: circleci/mysql:5.7
-      - image: circleci/golang:1.12
     steps:
       - checkout
       - run:
@@ -77,7 +76,6 @@ jobs:
   deploy:
     docker:
       - image: circleci/php:latest-node-browsers-legacy
-      - image: circleci/golang:1.12
     steps:
       - checkout
       - run:
@@ -92,11 +90,13 @@ jobs:
       - run:
           name: Install golang and ghr
           command: |
-            wget -c https://storage.googleapis.com/golang/go1.7.3.linux-amd64.tar.gz
-            sudo tar -C /usr/local -xvzf go1.7.3.linux-amd64.tar.gz
-            export  PATH=$PATH:/usr/local/go/bin
-            export GOPATH="$HOME/go_projects"
-            export GOBIN="$GOPATH/bin"
+            curl -O https://storage.googleapis.com/golang/go1.11.2.linux-amd64.tar.gz
+            tar -xvf go1.11.2.linux-amd64.tar.gz
+            sudo mv go /usr/local
+            export GOPATH=$HOME/work
+            export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
+            source ~/.profile
+            go get -u github.com/tcnksm/ghr
       - run:
           name: Install WPCLI
           command: |
